# Learning-Reduced-Order-Models

./: .gitignore  CHECKPOINT_NOTES.md  CLAUDE.md  README.md  interactive_ae_cross_section_explorer.html  pyproject.toml  requirements.txt
.agents/: README.md  RECOVERED_HISTORY.md
_agents/: README.md  RECOVERED_HISTORY.md
docs/: LROM_ARCHITECTURE_UNDERSTANDING.md  VERSIONING.md
lrom/: __init__.py  basis.py  emulator.py  fom.py  potentials.py  predictors.py  sampling.py  state.py  training.py
lrom_bench/: __init__.py  artifacts.py  config.py  metrics.py  numerics.py  prediction.py  predictors.py  reduced_basis.py  rf_lrom.py  rose_fom.py  sampling.py
lrom_demo/: cross_section_recompute.py
lrom_legacy/: __init__.py
notebooks/: 01_fom_and_rose_basics.ipynb  01_rbm_vs_lrom_single_wavefunction.ipynb  02_lrom_method_walkthrough.ipynb  03_cross_section_cat_comparison.ipynb  Benchmark_01.ipynb  Benchmark_1.0.ipynb  Benchmark_2.0.ipynb  benchmark_02.ipynb  rose_helper.py
ntbk_validation/: N2_physics_validation.ipynb
scripts/: generate_notebook01.py  smoke_test_imports.py
tests/: test_benchmark_02_notebook.py  test_benchmark_1_0_notebook.py  test_benchmark_2_0_notebook.py  test_benchmark_2_0_notebooks.py  test_config.py  test_lrom_artifacts.py  test_lrom_basis.py  test_lrom_config.py  test_lrom_fom.py  test_lrom_lifecycle.py  test_lrom_public_api.py  test_lrom_sampling.py  test_lrom_training.py  test_metrics_artifacts.py  test_notebook01_generation.py  test_notebook01_lrom_flow.py  test_notebook01_rose_diagnostic.py  test_numerics.py  test_predictors.py  test_project_metadata.py  test_reduced_basis.py  test_rf_lrom.py  test_rose_fom_import.py  test_rose_fom_real_ws.py  test_sampling.py  test_v1_0_rose_boundary.py  test_v1_2_characterization.py  test_v1_2_exact_fom.py  test_v1_2_ls_separation.py  (+1 more)
(+76 files in other folders)
