[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lrom"
version = "2.0.0"
description = "Research benchmark package for LROM notebook parity"
requires-python = ">=3.11,<3.14"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas",
  "nbformat",
  "nbclient",
  "numba",
  "nuclear-rose>=1.1.7",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lrom*", "lrom_bench*", "lrom_legacy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
